Updated generated node-server code with new endpoint for saving, implemented saving so entries are updated in Mongo.
