# nodejs-server-server/api/swagger.yaml
@@ -12,6 +12,100 @@ tags:
 schemes:
 - "http"
 paths:
+  /patient:
+    put:
+      summary: "Update a single patient record"
+      description: "Updates a single patient record"
+      operationId: "updatePatientRecord"
+      consumes:
+      - "application/xml"
+      - "application/json"
+      produces:
+      - "application/xml"
+      - "application/json"
+      parameters:
+      - in: "body"
+        name: "patient"
+        description: "Patient object to update"
+        required: true
+        schema:
+          type: "array"
+          items:
+            type: "object"
+            properties: {}
+      responses:
+        200:
+          description: "Successful Update"
+          headers:
+            Access-Control-Allow-Origin:
+              type: "string"
+              description: "Setting this header to `*` allows all origins. This is\
+                \ handy for public REST APIs that don't require authentication. But,\
+                \ according to the HTTP spec, browsers *WILL NOT* send cookies if\
+                \ this header is `*`, regardless of what you set `Access-Control-Allow-Credentials`\
+                \ to.\n"
+              default: "*"
+        400:
+          description: "Invalid ID supplied"
+          headers:
+            Access-Control-Allow-Origin:
+              type: "string"
+              description: "Setting this header to `*` allows all origins. This is\
+                \ handy for public REST APIs that don't require authentication. But,\
+                \ according to the HTTP spec, browsers *WILL NOT* send cookies if\
+                \ this header is `*`, regardless of what you set `Access-Control-Allow-Credentials`\
+                \ to.\n"
+              default: "*"
+        404:
+          description: "Patient not found"
+          headers:
+            Access-Control-Allow-Origin:
+              type: "string"
+              description: "Setting this header to `*` allows all origins. This is\
+                \ handy for public REST APIs that don't require authentication. But,\
+                \ according to the HTTP spec, browsers *WILL NOT* send cookies if\
+                \ this header is `*`, regardless of what you set `Access-Control-Allow-Credentials`\
+                \ to.\n"
+              default: "*"
+      x-swagger-router-controller: "Default"
+    options:
+      operationId: "patientOPTIONS"
+      parameters: []
+      responses:
+        200:
+          description: "Successful Update"
+          headers:
+            Access-Control-Allow-Origin:
+              type: "string"
+              description: "Setting this header to `*` allows all origins. This is\
+                \ handy for public REST APIs that don't require authentication. But,\
+                \ according to the HTTP spec, browsers *WILL NOT* send cookies if\
+                \ this header is `*`, regardless of what you set `Access-Control-Allow-Credentials`\
+                \ to.\n"
+              default: "*"
+        400:
+          description: "Invalid ID supplied"
+          headers:
+            Access-Control-Allow-Origin:
+              type: "string"
+              description: "Setting this header to `*` allows all origins. This is\
+                \ handy for public REST APIs that don't require authentication. But,\
+                \ according to the HTTP spec, browsers *WILL NOT* send cookies if\
+                \ this header is `*`, regardless of what you set `Access-Control-Allow-Credentials`\
+                \ to.\n"
+              default: "*"
+        404:
+          description: "Patient not found"
+          headers:
+            Access-Control-Allow-Origin:
+              type: "string"
+              description: "Setting this header to `*` allows all origins. This is\
+                \ handy for public REST APIs that don't require authentication. But,\
+                \ according to the HTTP spec, browsers *WILL NOT* send cookies if\
+                \ this header is `*`, regardless of what you set `Access-Control-Allow-Credentials`\
+                \ to.\n"
+              default: "*"
+      x-swagger-router-controller: "Default"
   /patient/{shrId}:
     get:
       summary: "Find patient by SHR ID"
@@ -28,7 +122,7 @@ paths:
         type: "string"
       responses:
         200:
-          description: "successful operation"
+          description: "Successful Operation"
           headers:
             Access-Control-Allow-Origin:
               type: "string"
