# nodejs-server-server/controllers/DefaultService.js
@@ -12,3 +12,22 @@ exports.getPatientById = function(args, res, next) {
   patientHandler.getPatientById(args, res, next);
 }
 
+exports.patientOPTIONS = function(args, res, next) {
+  /**
+   *
+   * no response value expected for this operation
+   **/
+  res.end();
+}
+
+exports.updatePatientRecord = function(args, res, next) {
+  /**
+   * Update a single patient record
+   * Updates a single patient record
+   *
+   * patient List Patient object to update
+   * no response value expected for this operation
+   **/
+  patientHandler.updatePatient(args, res, next);
+}
+
